--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dbarochiya.github.io/me",
+  "homepage": "https://github.com/savjisuyash-code/Portfolio.git",
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "browserslist": "^4.16.0",
